# ai-travel-rewards-agent

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_users.py  002_user_profiles.py
backend/app/: main.py
backend/app/api/: auth.py  preferences.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  user.py  user_profile.py
backend/app/schemas/: auth.py  preferences.py
backend/app/static_data/: preferences_options.py  supported_cards.py  travel_cities.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_preferences.py  test_security.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx
frontend/src/components/: OnboardingGuard.test.tsx  OnboardingGuard.tsx  PreferencesForm.test.tsx  PreferencesForm.tsx  ProtectedRoute.test.tsx  ProtectedRoute.tsx
frontend/src/context/: AuthContext.test.tsx  AuthContext.tsx
frontend/src/lib/: api.test.ts  api.ts
frontend/src/pages/: DashboardPage.tsx  LoginPage.test.tsx  LoginPage.tsx  PreferencesPage.tsx  SignUpPage.test.tsx  SignUpPage.tsx
frontend/src/test/: setup.ts
infra/: docker-compose.yml
