[project]
name = "ai-travel-rewards-agent-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "psycopg2-binary",
    "pydantic-settings",
    "python-dotenv",
    "redis",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
